Added new options for division integration
