# config/packages/nelmio_api_doc.yaml
@@ -35,19 +35,24 @@ nelmio_api_doc:
                         -   in: header
                             name: numbers
                             required: true
-            /api/v1/login/{user}:
+            /api/v1/login:
                 post:
-                    summary: Login.
                     parameters:
                         -   in: header
                             name: code
                             required: true
-                        -   in: header
-                            name: username
-                            required: true
-                        -   in: header
-                            name: password
-                            required: true
+                    summary: Login.
+                    requestBody:
+                        description: Login to app
+                        content:
+                            application/json:
+                                schema:
+                                    type: object
+                                    properties:
+                                        username:
+                                            type: string
+                                        password:
+                                            type: string
 
 
                                 
